--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@snapshot-labs/pineapple",
+  "name": "@snapshot-labs/score",
   "version": "0.1.0-beta.0",
   "license": "MIT",
   "main": "dist/index.js",
@@ -12,7 +12,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.5"
+    "@ethersproject/address": "^5.6.0",
+    "@ethersproject/strings": "^5.6.0",
+    "@snapshot-labs/snapshot.js": "^0.3.77",
+    "cross-fetch": "^3.1.5",
+    "json-to-graphql-query": "^2.2.4"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
@@ -23,6 +27,7 @@
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "files": [
