--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "noImplicitAny": false
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "test/**/*"
   ],
   "exclude": [
     "node_modules"
