--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "lint": "eslint src/ test/ --ext .ts",
+    "lint:fix": "yarn lint --fix",
     "build": "tsc",
-    "lint": "eslint ./src --ext .ts --fix",
     "prepare": "yarn build",
     "prepublishOnly": "yarn run lint",
     "test": "jest"
@@ -15,9 +16,14 @@
     "cross-fetch": "^3.1.5"
   },
   "devDependencies": {
-    "@snapshot-labs/eslint-config": "^0.1.0-beta.2",
-    "@types/jest": "^27.5.0",
+    "@snapshot-labs/eslint-config": "^0.1.0-beta.9",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.8",
+    "eslint": "^8.46.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "form-data": "^4.0.0",
     "jest": "^27.5.1",
+    "prettier": "^3.0.1",
     "ts-jest": "^27.1.4",
     "typescript": "^4.7.3"
   },
