--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,5 +4,11 @@ on: [push]
 
 jobs:
   test:
+    strategy:
+      matrix:
+        target: ['16', '18', '20']
+
     uses: snapshot-labs/actions/.github/workflows/test.yml@main
     secrets: inherit
+    with:
+      target: ${{ matrix.target }}
